--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ description:         >
   기본에 충실하자.
 # This should be the same author as first entry in `_data/authors.yml`
 author:
-  name:              aiden min
-  email:             zoqozqz@gmail.com
+  name:              Won Young Park
+  email:             wyparks2@gmail.com
 
 # Fallback image and color
 image:               /assets/img/nap.jpg
