--- a/_config.yml
+++ b/_config.yml
@@ -46,10 +46,10 @@ google_fonts:        Lato
 google_analytics:    UA-92346434-1
 
 # Setting a disqus shortname will enable the comment section on pages with `comments: true` in the front matter
-disqus_shortname:    Won Young Park
+disqus_shortname:    wonyoungpark
 
 # This text will appear in the footer of every page. Markdown enabled.
-copyright:           '&copy; 2017. by Won Young park'
+copyright:           '&copy; 2017. by Won Young Park'
 
 # Format of the permalinks
 permalink:           pretty
