--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   email:             wyparks2@gmail.com
 
 # Fallback image and color
-image:               /assets/img/nap.jpg
+image:               /assets/img/nap.jpeg
 color:               '#4f86aa'
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
