상대경로 세팅

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: https://wonyoungpark.github.io
 
 # Set to '' when hosting a blog on GitHub Pages, ie on `//<username>.github.io`
 # Set to '/<reponame>' when using the `gh-pages` branch of a repository
-baseurl:             ""
+baseurl: wonyoungpark.github.io
 
 # A very short description of your page
 tagline: Back to the basic
@@ -108,7 +108,8 @@ exclude:
   - node_modules
   - package.json
   - package-lock.json
-  
+  - Gemfile
+  - Gemfile.lock
 
 kramdown:
   footnote_backlink: '&#x21a9;&#xfe0e;'
