--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: One.0의 공부 블로그
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
-url: https://wonyoungpark.github.io
+url: blog.one0.me
 
 # Set to '' when hosting a blog on GitHub Pages, ie on `//<username>.github.io`
 # Set to '/<reponame>' when using the `gh-pages` branch of a repository
